# wealthlog

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  run_mcp.py
backend/alembic/: env.py
backend/alembic/versions/: 10b2c3d4e5f6_add_model_to_chat_messages.py  20c3d4e5f6a7_merge_heads.py  30d4e5f6a7b8_add_chat_message_session_role_created_index.py  31e5f6a7b8c9_rename_default_categories_to_english.py  42f6a7b8c9d0_add_token_usage.py  53a7b8c9d0e1_add_pending_actions.py  64b8c9d0e1f2_add_fact_supersession.py  75c9d0e1f2a3_drop_weekly_digests.py  86d0e1f2a3b4_add_pending_action_preview.py  a1b2c3d4e5f6_add_chat_sessions_and_user_facts.py  a7b8c9d0e1f2_add_session_summary_outcome.py  b2c3d4e5f6a7_add_blocks_to_chat_messages.py  b8c9d0e1f2a3_add_user_model_commitments_summary_fields.py  c065c9546010_initial_schema.py  c3d4e5f6a7b8_add_session_summaries_and_fact_expiry.py  c9d0e1f2a3b4_add_weekly_digests.py  d0e1f2a3b4c5_add_fact_topics.py  d4e5f6a7b8c9_add_fact_importance_and_access_tracking.py  e5f6a7b8c9d0_add_trgm_to_user_facts.py  f6a7b8c9d0e1_add_fact_verification.py
backend/app/: api_errors.py  config.py  database.py  logging_config.py  main.py
backend/scripts/: run_mcp.py
backend/tests/: conftest.py  test_agent_compaction.py  test_categories.py  test_fact_dedup.py  test_fact_ranking.py  test_investments.py  test_memory.py  test_memory_integration.py  test_recurring.py  test_seed.py  test_summary.py  test_transactions.py
docs/: API.md  (+4 more)
(+293 files in other folders)
