[project]
name = "wealthlog-api"
version = "0.1.0"
description = "WealthLog Backend API - Personal Finance Management"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dateutil>=2.9.0",
    "mcp[cli]>=1.0.0",
    "anthropic>=0.52.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/ai/mcp/tools/reports.py" = ["E501"]
"app/ai/mcp/tools/transactions.py" = ["E501"]
"app/ai/mcp/tools/transaction_batch.py" = ["E501"]
"app/services/seed.py" = ["E501"]
"tests/**/*.py" = ["N801", "N805"]
